--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -452,11 +452,11 @@ http://www.tooplate.com/view/2098-health
   }
 
 .slider .item-first {
-  background-image: url("../images/slide1.jpg");
+  background-image: url("../images/slider1.jpg");
 }
 
 .slider .item-second {
-  background-image: url("../images/slide2.jpg");
+  background-image: url("../images/slider2.jpg");
 }
 
 .slider .item-third {
