--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -460,7 +460,7 @@ http://www.tooplate.com/view/2098-health
 }
 
 .slider .item-third {
-  background-image: url("../images/slide3.jpg");
+  background-image: url("../images/slider3.jpg");
 }
 
 
