--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -15,6 +15,13 @@ http://www.tooplate.com/view/2098-health
   }
 
 
+.team-img {
+  width: 100%;
+  aspect-ratio: 1 / 1; /* square */
+  object-fit: cover;
+  border-radius: 8px; /* دەتوانیت بسڕیتەوە */
+}
+
   /*---------------------------------------
      TYPOGRAPHY     s         
   -----------------------------------------*/
