--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -6,7 +6,7 @@ http://www.tooplate.com/view/2098-health
 
 */
 
-  @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600');
+  @import url('https://font.googleapis.com/css?family=Poppins:400,500,600');
 
   body {
     background: #ffffff;
@@ -24,7 +24,7 @@ http://www.tooplate.com/view/2098-health
 
 @font-face {
   font-family: 'Rudaw';
-  src: url('fonts/Rudaw.ttf') format('truetype');
+  src: url('font/Rudaw.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
