--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -6,13 +6,15 @@ http://www.tooplate.com/view/2098-health
 
 */
 
-  @import url('https://Fonts.googleapis.com/css?family=Poppins:400,500,600');
+  /*@import url('https://Fonts.googleapis.com/css?family=Poppins:400,500,600');*/
 
   body {
-    background: #ffffff;
-    font-family: 'Poppins', sans-serif;
-    overflow-x: hidden;
-  }
+  background: #ffffff;
+  font-family: 'Rudaw', sans-serif;
+  overflow-x: hidden;
+  direction: rtl;
+  text-align: right;
+}
 
 
 
