--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -15,7 +15,15 @@ body {
 }
 
 
-
+#snow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* کلیک لەسەر شتەکان ناکات */
+  z-index: 9999;
+}
 
 @font-face {
   font-family: 'Rudaw';
