--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -15,6 +15,8 @@ body {
 }
 
 
+
+
 #snow {
   position: fixed;
   top: 0;
@@ -1065,6 +1067,11 @@ body {
       bottom: 10em;
     }
   }
+
+body {
+  background-color: #1f1f1f; /* ڕەساسی */
+  color: #e0e0e0;           /* نووسین سپی نرمو */
+}
 
   @media only screen and (max-width: 639px) {
     h1 {
