--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -15,7 +15,11 @@ body {
 }
 
 
-
+.wow {
+  animation: inherit !important;
+  opacity: inherit !important;
+  transform: inherit !important;
+}
 
 
 
