--- a/css/dark.css
+++ b/css/dark.css
@@ -370,6 +370,19 @@ footer h4,
   padding: 10px 0;
 }
 
+.news-thumb {
+  border-radius: 22px;
+  overflow: hidden; /* ئەمە گرنگترین شتە */
+}
+
+.news-thumb img {
+  display: block;
+  width: 100%;
+  height: auto;
+
+  border-radius: 0; /* چونکە کارت خۆی قەوسە */
+}
+
 @media (max-width: 768px) {
   .news-thumb {
     min-height: 480px;
