--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -250,11 +250,11 @@ body {
 
 /* BAR */
 .loader-bar {
-  width: 220px;
-  height: 4px;
-  background: rgba(212, 175, 55, 0.2);
-  border-radius: 10px;
-  overflow: hidden;
+  background: linear-gradient(90deg, #6b4e00, #ffd700, #fff1a8);
+  box-shadow:
+    0 0 10px rgba(255, 215, 0, 0.6),
+    0 0 25px rgba(255, 215, 0, 0.8),
+    0 0 40px rgba(255, 215, 0, 1);
 }
 
 .loader-bar span {
