--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -279,14 +279,82 @@ body {
   transition: 0.6s ease;
 }
 
+/*menuai*/
+body {
+  margin: 0;
+  font-family: sans-serif;
+}
 
+/* MENU BUTTON */
+.menu-btn {
+  font-size: 26px;
+  padding: 15px;
+  cursor: pointer;
+  color: #fff;
+}
 
+/* OVERLAY */
+#overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.4);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  z-index: 9;
+}
+
+/* SIDE MENU */
+#side-menu {
+  position: fixed;
+  top: 0;
+  left: -280px;
+  width: 280px;
+  height: 100%;
+  background: linear-gradient(180deg, #3bb78f, #0bab64);
+  color: #fff;
+  transition: 0.4s ease;
+  z-index: 10;
+  padding: 20px;
+  border-radius: 0 25px 25px 0;
+}
+
+/* HEADER */
+.menu-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+}
+
+/* LIST */
+.menu-list {
+  list-style: none;
+  padding: 30px 0 0;
+}
+
+.menu-list li {
+  padding: 15px 0;
+  font-size: 16px;
+  border-bottom: 1px solid rgba(255,255,255,0.2);
+  cursor: pointer;
+}
+
+/* ACTIVE */
+#side-menu.active {
+  left: 0;
+}
+
+#overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
 
   /*---------------------------------------
       MENU              
   -----------------------------------------*/
 
-  header {
+  /*header {
     background: #ffffff;
     border-bottom: 1px solid #f2f2f2;
     display: flex;
@@ -325,7 +393,7 @@ body {
   header span i {
     color: #a5c422;
     margin-right: 5px;
-  }
+  }*/
 
 
 
@@ -333,7 +401,7 @@ body {
       MENU              
   -----------------------------------------*/
 
-  .navbar-default {
+  /*.navbar-default {
     background: #ffffff;
     box-shadow: 0 2px 8px rgba(0,0,0,.075);
     border: none;
@@ -408,7 +476,7 @@ body {
   .navbar-default .navbar-toggle:hover,
   .navbar-default .navbar-toggle:focus { 
     background-color: transparent;
-  }
+  }*/8
 
 
 
