--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -15,7 +15,29 @@ body {
 }
 
 
+.card-item {
+    display: flex;
+    margin-bottom: 20px;
+}
 
+.team-thumb {
+    width: 100%;
+    height: 100%;
+    min-height: 350px; /* قەبارەی ستاندارد */
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.card-item {
+    flex: 0 0 300px; /* قەبارەی ستاندارد */
+}
 
 
 
