--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -39,6 +39,11 @@ body {
     flex: 0 0 300px; /* قەبارەی ستاندارد */
 }
 
+.team-thumb img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
 
 
 @font-face {
