--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -633,7 +633,7 @@ body {
     opacity: 1;
     transition-delay: 0.3s;
     transform: translateY(0px);
-    top: -22em;
+    /*top: -22em; */
   }
 
 
